--- a/src/app/customer-list/customer-list.component.html
+++ b/src/app/customer-list/customer-list.component.html
@@ -1,3 +1,40 @@
-<p>
-  customer-list works!
-</p>
+<div class="mat-elevation-z8">
+  <mat-spinner [style.display]="loading ? 'block' : 'none'"></mat-spinner>
+
+  <mat-table
+    [style.display]="loading === false ? 'block' : 'none'"
+    #table
+    [dataSource]="dataSource"
+  >
+    <ng-container matColumnDef="id">
+      <mat-header-cell *matHeaderCellDef>Customer ID</mat-header-cell>
+      <mat-cell *matCellDef="let customer">{{ customer.id }}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef>Customer Name</mat-header-cell>
+      <mat-cell *matCellDef="let customer">{{ customer.name }}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="job">
+      <mat-header-cell *matHeaderCellDef>Customer Job</mat-header-cell>
+      <mat-cell *matCellDef="let customer">{{ customer.job }}</mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+
+    <ng-container matColumnDef="operations">
+      <mat-header-cell *matHeaderCellDef>Operations</mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        <button mat-button color="primary" (click)="deleteCustomer(element.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+
+        <button mat-button (click)="editCustomer(element.id)" color="primary">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </mat-cell>
+    </ng-container>
+  </mat-table>
+</div>
